--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -180,8 +180,41 @@
         </nav>
     </header>
     <div class="gameResults">
-
         <section aria-label="yesterday result">
+            <h2 class="date">friday 19/01/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">36 - 69 - 43 - 4 - 39</p>
+                <p class="machine">1 - 40 - 89 - 23 - 5</p>        
+            </article>
+            <article>
+                <h3 class="game">metro</h3>
+                <p class="winning">86 - 43 - 68 - 87 - 69</p>
+                <p class="machine">64 - 49 - 52 - 70 - 6</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">28 - 9 - 66 - 85 - 70</p>
+                <p class="machine">55 - 45 - 27 - 34 - 68</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">6 - 39 - 81 - 69 - 72</p>
+                <p class="machine">4 - 18 - 64 - 29 - 52</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">65 - 31 - 28 - 26 - 41</p>
+                <p class="machine">68 - 54 - 42 - 83 - 76</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">89 - 57 - 17 - 61 - 13</p>
+                <p class="machine">24 - 44 - 42 - 86 - 55</p>        
+            </article>
+        </section>
+
+        <section aria-label="two days ago result">
             <h2 class="date">thursday 18/1/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -216,39 +249,7 @@
         </section>
 
 
-        <section aria-label="two days ago result">
-            <h2 class="date">wednesday 17/1/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">39 - 45 - 35 - 77 - 25</p>
-                <p class="machine">49 - 24 - 51 - 17 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">9 - 59 - 79 - 8 - 2</p>
-                <p class="machine">57 - 73 - 22 - 84 - 3</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">2 - 3 - 67 - 21 - 41</p>
-                <p class="machine">10 - 89 - 87 - 52 - 90</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">30 - 31 - 18 - 27 - 5</p>
-                <p class="machine">12 - 53 - 61 - 74 - 38</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">44 - 78 - 11 - 21 - 80</p>
-                <p class="machine">69 - 87 - 61 - 73 - 37</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY</h3>
-                <p class="winning">30 - 86 - 69 - 47 - 58</p>
-                <p class="machine">82 - 34 - 27 - 23 - 72</p>        
-            </article>
-        </section>
+            
 
            
 
