--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -181,6 +181,40 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">sunday 21/1/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">2 - 77 - 81 - 47 - 84</p>
+                <p class="machine">18 - 30 - 27 - 5 - 60</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">80 - 35 - 10 - 69 - 74</p>
+                <p class="machine">68 - 15 - 66 - 86 - 49</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">82 - 54 - 70 - 83 - 10</p>
+                <p class="machine">77 - 9 - 11 - 30 - 23</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">79 - 71 - 11 - 28 - 36</p>
+                <p class="machine">57 - 90 - 50 - 15 - 2</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">17 - 74 - 57 - 43 - 54</p>
+                <p class="machine">78 - 65 - 44 - 84 - 56</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">1 - 78 - 20 - 87 - 46</p>
+                <p class="machine">9 - 82 - 58 - 88 - 11</p>        
+            </article>
+        </section>
+
+        <section aria-label="two days ago result">
             <h2 class="date">saturday 20/1/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -213,42 +247,6 @@
                 <p class="machine">33 - 83 - 8 - 72 - 29</p>        
             </article>
         </section>
-
-        <section aria-label="two days ago result">
-            <h2 class="date">friday 19/01/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">36 - 69 - 43 - 4 - 39</p>
-                <p class="machine">1 - 40 - 89 - 23 - 5</p>        
-            </article>
-            <article>
-                <h3 class="game">metro</h3>
-                <p class="winning">86 - 43 - 68 - 87 - 69</p>
-                <p class="machine">64 - 49 - 52 - 70 - 6</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">28 - 9 - 66 - 85 - 70</p>
-                <p class="machine">55 - 45 - 27 - 34 - 68</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">6 - 39 - 81 - 69 - 72</p>
-                <p class="machine">4 - 18 - 64 - 29 - 52</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">65 - 31 - 28 - 26 - 41</p>
-                <p class="machine">68 - 54 - 42 - 83 - 76</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">89 - 57 - 17 - 61 - 13</p>
-                <p class="machine">24 - 44 - 42 - 86 - 55</p>        
-            </article>
-        </section>
-
-
 
     </div>
     
