--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -181,6 +181,40 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">monday 22/1/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">88 - 84 - 90 - 5 - 63</p>
+                <p class="machine">89 - 37 - 45 - 80 - 21</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">38 - 66 - 6 - 75 - 44</p>
+                <p class="machine">39 - 87 - 22 - 27 - 55</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">30 - 74 - 55 - 65 - 44</p>
+                <p class="machine">9 - 53 - 39 - 29 - 32</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">20 - 51 - 8 - 50 - 79</p>
+                <p class="machine">3 - 37 - 80 - 4 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">87 - 37 - 81 - 59 - 44</p>
+                <p class="machine">71 - 74 - 16 - 82 - 6</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">29 - 35 - 13 - 27 - 7</p>
+                <p class="machine">23 - 46 - 31 - 34 - 14</p>        
+            </article>
+        </section>
+
+        <section aria-label="two days ago result">
             <h2 class="date">sunday 21/1/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -214,40 +248,7 @@
             </article>
         </section>
 
-        <section aria-label="two days ago result">
-            <h2 class="date">saturday 20/1/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">54 - 2 - 16 - 7 - 10</p>
-                <p class="machine">4 - 69 - 61 - 18 - 72</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">55 - 61 - 76 - 64 - 35</p>
-                <p class="machine">8 - 10 - 26 - 62 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">12 - 51 - 28 - 1 - 17</p>
-                <p class="machine">63 - 76 - 82 - 87 - 68</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">61 - 68 - 6 - 87 - 14</p>
-                <p class="machine">23 - 50 - 1 - 81 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">66 - 67 - 40 - 35 - 68</p>
-                <p class="machine">2 - 4 - 87 - 59 - 3</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">26 - 13 - 34 - 64 - 30</p>
-                <p class="machine">33 - 83 - 8 - 72 - 29</p>        
-            </article>
-        </section>
-
+            
     </div>
     
     <div class="gameList">
