--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -181,6 +181,40 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">thursday 25/01/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">49 - 89 - 34 - 32 - 39</p>
+                <p class="machine">21 - 79 - 36 - 71 - 53</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">44 - 28 - 25 - 17 - 51</p>
+                <p class="machine">15 - 13 - 49 - 76 - 14</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">1 - 4 - 33 - 89 - 43</p>
+                <p class="machine">20 - 57 - 9 - 74 - 68</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">29 - 55 - 23 - 73 - 12</p>
+                <p class="machine">42 - 57 - 27 - 24 - 58</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">61 - 69 - 48 - 40 - 65</p>
+                <p class="machine">27 - 1 - 88 - 68 - 58</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">6 - 77 - 16 - 20 - 39</p>
+                <p class="machine">78 - 29 - 10 - 88 - 32</p>        
+            </article>
+        </section>
+
+        <section aria-label="two days ago result">
             <h2 class="date">wednesday 24/1/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -215,39 +249,7 @@
         </section>
 
 
-        <section aria-label="two days ago result">
-            <h2 class="date">tuesday 23/1/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">21 - 72 - 62 - 55 - 25</p>
-                <p class="machine">37 - 65 - 38 - 53 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">51 - 16 - 25 - 70 - 22</p>
-                <p class="machine">69 - 6 - 63 - 28 - 80</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">75 - 17 - 65 - 72 - 64</p>
-                <p class="machine">33 - 87 - 69 - 39 - 7</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">87 - 28 - 64 - 90 - 36</p>
-                <p class="machine">46 - 77 - 34 - 38 - 88</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky G</h3>
-                <p class="winning">25 - 82 - 72 - 6 - 68</p>
-                <p class="machine">27 - 49 - 84 - 32 - 28</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">11 - 66 - 76 - 90 - 39</p>
-                <p class="machine">53 - 23 - 6 - 57 - 46</p>        
-            </article>
-        </section>
+           
  
     </div>
     
