--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Visual Lotto Board is a webpage for Past and Up-to-date Premier lotto, Baba Ijebu and Ghana games results">
 
         <meta property="og:title" content="Visual Lotto Board">
-        <meta property="og:description" content="Digital board to check Premier Lotto Baba Ijebu result and game plans">
+        <meta property="og:description" content="Digital board for Premier Lotto Baba Ijebu and Ghana RESULT">
         <meta property="og:image" content="https://i.postimg.cc/mgJRmrPV/mobile-2.png">
         <meta property="og:imahe:alt" content="">
         <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/">
@@ -28,7 +28,7 @@
         <header>
             <nav>
                 <ul>
-                    <li class="home"><a href="#" aria-current="page">HOME</a></li>
+                    <li><a href="#" aria-current="page" class="home">HOME</a></li>
                     <li><a href="./GAMES/1Royal.html">Royal</a></li>
                     <li><a href="./GAMES/2Mark-II.html">Mark-II</a> </li>
                     <li><a href="./GAMES/3Enugu.html">Enugu</a></li>
