--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,6 +179,40 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">saturday 27/1/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">46 - 31 - 53 - 26 - 87</p>
+                <p class="machine">6 - 80 - 70 - 3 - 81</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">23 - 14 - 2 - 43 - 60</p>
+                <p class="machine">84 - 77 - 37 - 52 - 64</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">59 - 20 - 26 - 3 - 28</p>
+                <p class="machine">88 - 14 - 75 - 21 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">73 - 63 - 79 - 41 - 20</p>
+                <p class="machine">82 - 71 - 45 - 40 - 43</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">29 - 41 - 25 - 45 - 60</p>
+                <p class="machine">90 - 9 - 63 - 23 - 52</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">44 - 41 - 29 - 12 - 60</p>
+                <p class="machine">17 - 24 - 25 - 52 - 2</p>        
+            </article>
+        </section>
+
+        <section aria-label="two days ago result">
             <h2 class="date">friday 26/1/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -212,40 +246,7 @@
             </article>
         </section>
 
-        <section aria-label="two days ago result">
-            <h2 class="date">thursday 25/01/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">49 - 89 - 34 - 32 - 39</p>
-                <p class="machine">21 - 79 - 36 - 71 - 53</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">44 - 28 - 25 - 17 - 51</p>
-                <p class="machine">15 - 13 - 49 - 76 - 14</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">1 - 4 - 33 - 89 - 43</p>
-                <p class="machine">20 - 57 - 9 - 74 - 68</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">29 - 55 - 23 - 73 - 12</p>
-                <p class="machine">42 - 57 - 27 - 24 - 58</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">61 - 69 - 48 - 40 - 65</p>
-                <p class="machine">27 - 1 - 88 - 68 - 58</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">6 - 77 - 16 - 20 - 39</p>
-                <p class="machine">78 - 29 - 10 - 88 - 32</p>        
-            </article>
-        </section>
-
+           
     </div>
     
     <div class="gameList">
