Plan on MARK II

--- a/plan.html
+++ b/plan.html
@@ -205,8 +205,36 @@
         </nav>
     </header>
     <main>
-        <!-- <h2>Welcome to Plan Page</h2> -->
-        <h1>Please Check Back Some Few Time</h1>
+        <h2>Welcome to Plan Page</h2>
+        <small>Click the image to go to the main board</small>
+        <!-- <h1>Please Check Back Some Few Time</h1> -->
+
+        <section>
+            <h2>MARK II-to-Royal</h2>
+            <a href="https://vlb.hologutibusinesscentre.com/GAMES/2Mark-II.html">
+                <img src="https://i.postimg.cc/sDJ74wSz/mark-ii.png">
+            </a> 
+        </section>
+
+        <section>
+            <h2>DIAMOND-to-Royal</h2>
+            <a href="https://vlb.hologutibusinesscentre.com/GAMES/6Diamond.html">
+                <img src="https://i.postimg.cc/W4McKF7M/Diamond-board.png">
+            </a> 
+        </section>
+
+        <section>
+            <h2>INTER-to-Royal</h2>
+            <a href="https://vlb.hologutibusinesscentre.com/GAMES/10Inter.html">
+                <img src="https://i.postimg.cc/sfGrkg4H/inter-board.png">
+            </a> 
+        </section>
+
+        <p>What do you pick?</p>
+
+        <p>Drop it on the facebook <a href="https://www.facebook.com/visuaLottoBoard/posts/pfbid028GzrQ5wcLbFbTwkJ5sGxHKEygoNqjaokjTD2CQq5BzHsPuebj1QDM7AQ31ZHCmQl"> comment section</a> under the post</p>
+
+        <p><b>Watch out for <span>ASEDA</span> later in the night</b></p>
        
     </main>
    
