--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
         
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css">
     </head>
@@ -198,7 +198,6 @@
                     <a href="https://twitter.com/visuaLottoBoard" target="_blank"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
                     <a href="https://www.facebook.com/visuaLottoBoard" target="_blank"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
                     <a href="https://m.me/109930914660224" target="_blank"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
-                    <a href="https://www.instagram.com/hologutibusines/" target="_blank"><i class="fa-brands fa-instagram"  aria-label="connect on Our instagram Page"></i></a>
                 </div>
             </div>
         </footer>
