Removed facebook comment

--- a/plan.html
+++ b/plan.html
@@ -240,7 +240,7 @@
             
             <p>What do you pick?</p>
 
-            <p>Drop it on the facebook <a href="https://www.facebook.com/visuaLottoBoard/posts/pfbid028GzrQ5wcLbFbTwkJ5sGxHKEygoNqjaokjTD2CQq5BzHsPuebj1QDM7AQ31ZHCmQl"> comment section</a> under the post</p>
+            <p>Let's have it. Drop it on any of the social media post down below</p>
     
         </section>
 
