--- a/plan.html
+++ b/plan.html
@@ -212,69 +212,71 @@
         </nav>
     </header>
     <main>
-        <h2>Welcome to Plan Page</h2>
-        <small>Click the image to go to the main board</small>
-        <!-- <h1>Please Check Back Some Few Time</h1> -->
-        <section id="current">
-            <h2>Currently</h2>
+        <!-- <h2>Welcome to Plan Page</h2>
+        <small>Click the image to go to the main board</small> -->
+        <h1>Please Check Back Some Few Time</h1>
+        <h2>All Plans have been closed</h2>
+        <h2>Nothing To Show Now</h2>
+        <!-- <section id="current">
+            <h2></h2>
             <article>
-                <h2>On Royal Board</h2>
-                <a href="https://vlb.hologutibusinesscentre.com/GAMES/1Royal">
-                    <img src="https://i.postimg.cc/tJkfKrqW/royal-board.png">
+                <h2></h2>
+                <a href="">
+                    <img src="">
                 </a> 
-            </article>
+            </article> -->
 
-            <article>
-                <h2>On Diamond Board</h2>
-                <a href="https://vlb.hologutibusinesscentre.com/GAMES/6Diamond.html">
-                    <img src="https://i.postimg.cc/bNrJJW7G/Diamond-board.png">
+            <!-- <article>
+                <h2></h2>
+                <a href="">
+                    <img src="">
                 </a> 
-            </article>
+            </article> -->
 
-            <article>
+            <!-- <article>
                 <h2>On inter-board</h2>
-                <a href="https://vlb.hologutibusinesscentre.com/GAMES/10Inter.html">
-                    <img src="https://i.postimg.cc/jqLmjrxn/inter-board.png">
+                <a href="">
+                    <img src="">
                 </a>
             </article>
             
-            <p>What do you pick?</p>
+            <p>What do you pick?</p> -->
 
-            <p>Let's have it. Drop it on any of the social media post down below</p>
+            <!-- <p>Let's have it. Drop it on any of the social media post down below</p>
     
-        </section>
+        </section> -->
 
         <hr>
 
-        <section id="earlier">
-            <h2>Earlier Today</h2>
+        <!-- <section id="earlier">
+            <h2></h2>
             <article>
-                <h2>MARK II-to-Royal</h2>
-                <a href="https://vlb.hologutibusinesscentre.com/GAMES/2Mark-II.html">
-                    <img src="https://i.postimg.cc/sDJ74wSz/mark-ii.png">
+                <h2></h2>
+                <a href="">
+                    <img src="">
                 </a> 
             </article>
 
             <article>
-                <h2>DIAMOND-to-Royal</h2>
-                <a href="https://vlb.hologutibusinesscentre.com/GAMES/6Diamond.html">
-                    <img src="https://i.postimg.cc/W4McKF7M/Diamond-board.png">
+                <h2></h2>
+                <a href="">
+                    <img src="">
                 </a> 
             </article>
 
             <article>
-                <h2>INTER-to-Royal</h2>
-                <a href="https://vlb.hologutibusinesscentre.com/GAMES/10Inter.html">
-                    <img src="https://i.postimg.cc/sfGrkg4H/inter-board.png">
+                <h2></h2>
+                <a href="">
+                    <img src="">
                 </a> 
             </article>
-        </section>
+        </section> -->
     </main>
     <footer>
-        <a href="https://twitter.com/visuaLottoBoard/status/1751615608427290888" target="_blank">
+        <a href="" target="_blank">
             <i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i>
         </a>
-        <a href="https://www.facebook.com/visuaLottoBoard/posts/pfbid0v9eFo9JDNbQm76TcCyLkz1pioDLTBisAgMXBdVnY2DExH4Wvmr3k1DNKyRdU5zFDl" target="_blank">
+        <a href="" target="_blank">
             <i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i>
         </a>
         <a href="https://m.me/109930914660224" target="_blank"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
