--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -178,7 +178,42 @@
         </nav>
     </header>
     <div class="gameResults">
-        <section aria-label="today results">
+        <section aria-label="yesterday result">
+            <h2 class="date">monday 29/01/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">71 - 60 - 61 - 85 - 49</p>
+                <p class="machine">74 - 66 - 73 - 81 - 20</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">30 - 67 - 56 - 78 - 33</p>
+                <p class="machine">27 - 76 - 8 - 42 - 68</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">21 - 55 - 27 - 32 - 38</p>
+                <p class="machine">29 - 37 - 7 - 86 - 88</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">9 - 62 - 89 - 18 - 87</p>
+                <p class="machine">1 - 22 - 35 - 3 - 27</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">56 - 62 - 50 - 27 - 10</p>
+                <p class="machine">21 - 20 - 28 - 87 - 43</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">87 - 61 - 75 - 10 - 51</p>
+                <p class="machine">82 - 90 - 59 - 11 - 2</p>        
+            </article>
+        </section>
+
+
+        <section aria-label="two days ago result">
             <h2 class="date">sunday 28/1/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -213,39 +248,7 @@
         </section>
 
 
-        <section aria-label="two days ago result">
-            <h2 class="date">saturday 27/1/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">46 - 31 - 53 - 26 - 87</p>
-                <p class="machine">6 - 80 - 70 - 3 - 81</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">23 - 14 - 2 - 43 - 60</p>
-                <p class="machine">84 - 77 - 37 - 52 - 64</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">59 - 20 - 26 - 3 - 28</p>
-                <p class="machine">88 - 14 - 75 - 21 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">73 - 63 - 79 - 41 - 20</p>
-                <p class="machine">82 - 71 - 45 - 40 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">29 - 41 - 25 - 45 - 60</p>
-                <p class="machine">90 - 9 - 63 - 23 - 52</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">44 - 41 - 29 - 12 - 60</p>
-                <p class="machine">17 - 24 - 25 - 52 - 2</p>        
-            </article>
-        </section>    
+            
     </div>
     
     <div class="gameList">
