--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,6 +179,40 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">tuesday 30/1/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">19 - 87 - 75 - 69 - 59</p>
+                <p class="machine">01 - 34 - 20 - 86 - 04</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">32 - 71 - 7 - 77 - 75</p>
+                <p class="machine">33 - 69 - 24 - 53 - 16</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">58 - 30 - 62 - 85 - 49</p>
+                <p class="machine">16 - 38 - 55 - 90 - 42</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">1 - 62 - 38 - 9 - 86</p>
+                <p class="machine">90 - 74 - 19 - 37 - 57</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">73 - 8 - 11 - 44 - 70</p>
+                <p class="machine">57 - 54 - 90 - 89 - 29</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">69 - 5 - 42 - 61 - 32</p>
+                <p class="machine">19 - 72 - 81 - 65 - 47</p>        
+            </article>
+        </section>
+
+        <section aria-label="two days ago result">
             <h2 class="date">monday 29/01/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -211,44 +245,7 @@
                 <p class="machine">82 - 90 - 59 - 11 - 2</p>        
             </article>
         </section>
-
-
-        <section aria-label="two days ago result">
-            <h2 class="date">sunday 28/1/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">53 - 28 - 55 - 9 - 70</p>
-                <p class="machine">16 - 63 - 5 - 42 - 11</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">89 - 7 - 49 - 2 - 43</p>
-                <p class="machine">25 - 12 - 37 - 53 - 61</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">85 - 49 - 53 - 75 - 86</p>
-                <p class="machine">60 - 52 - 35 - 7 - 38</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">59 - 17 - 83 - 28 - 42</p>
-                <p class="machine">50 - 79 - 75 - 5 - 77</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">78 - 53 - 73 - 6 - 13</p>
-                <p class="machine">4 - 63 - 79 - 62 - 87</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">9 - 25 - 30 - 65 - 52</p>
-                <p class="machine">21 - 35 - 76 - 82 - 50</p>        
-            </article>
-        </section>
-
-
-            
+  
     </div>
     
     <div class="gameList">
