--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                 
             </nav>
         </header>
+
+        <a href="#" id="top" aria-label="scroll up"><i class="fa-solid fa-arrow-up"></i></a>
+
         <main>
             <div class="btn-container">
                 <div class="page-ort-wrapper">
@@ -73,7 +76,6 @@
                 </div>
                 <button class="buy-lrCard">Buy LR Card</button>
             </div>
-
 
                         <!-- all games-->
             <section>
