--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,6 +179,41 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">wednesday 31/1/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">72 - 48 - 6 - 45 - 20</p>
+                <p class="machine">10 - 84 - 85 - 62 - 30</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">49 - 75 - 48 - 36 - 46</p>
+                <p class="machine">54 - 88 - 61 - 24 - 82</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">22 - 88 - 53 - 80 - 49</p>
+                <p class="machine">45 - 31 - 71 - 43 - 16</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">48 - 58 - 27 - 57 - 12</p>
+                <p class="machine">78 - 47 - 87 - 88 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">90 - 39 - 33 - 84 - 72</p>
+                <p class="machine">31 - 63 - 24 - 68 - 67</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">14 - 66 - 17 - 43 - 51</p>
+                <p class="machine">70 - 40 - 2 - 84 - 83</p>        
+            </article>
+        </section>
+
+
+        <section aria-label="two days ago result">
             <h2 class="date">tuesday 30/1/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -212,40 +247,6 @@
             </article>
         </section>
 
-        <section aria-label="two days ago result">
-            <h2 class="date">monday 29/01/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">71 - 60 - 61 - 85 - 49</p>
-                <p class="machine">74 - 66 - 73 - 81 - 20</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">30 - 67 - 56 - 78 - 33</p>
-                <p class="machine">27 - 76 - 8 - 42 - 68</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">21 - 55 - 27 - 32 - 38</p>
-                <p class="machine">29 - 37 - 7 - 86 - 88</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">9 - 62 - 89 - 18 - 87</p>
-                <p class="machine">1 - 22 - 35 - 3 - 27</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">56 - 62 - 50 - 27 - 10</p>
-                <p class="machine">21 - 20 - 28 - 87 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">87 - 61 - 75 - 10 - 51</p>
-                <p class="machine">82 - 90 - 59 - 11 - 2</p>        
-            </article>
-        </section>
-  
     </div>
     
     <div class="gameList">
