--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,6 +179,41 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">thursday 01/02/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">17 - 24 - 40 - 77 - 46</p>
+                <p class="machine">35 - 43 - 25 - 87 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">47 - 68 - 10 - 35 - 9</p>
+                <p class="machine">69 - 64 - 25 - 83 - 24</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">24 - 71 - 80 - 30 - 18</p>
+                <p class="machine">9 - 2 - 19 - 38 - 66</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">74 - 90 - 81 - 52 - 27</p>
+                <p class="machine">49 - 79 - 68 - 14 - 56</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">47 - 56 - 9 - 54 - 67</p>
+                <p class="machine">71 - 26 - 46 - 8 - 20</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">90 - 88 - 57 - 81 - 32</p>
+                <p class="machine">29 - 41 - 70 - 7 - 62</p>        
+            </article>
+        </section>
+
+
+        <section aria-label="two days ago result">
             <h2 class="date">wednesday 31/1/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -209,41 +244,6 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">14 - 66 - 17 - 43 - 51</p>
                 <p class="machine">70 - 40 - 2 - 84 - 83</p>        
-            </article>
-        </section>
-
-
-        <section aria-label="two days ago result">
-            <h2 class="date">tuesday 30/1/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">19 - 87 - 75 - 69 - 59</p>
-                <p class="machine">01 - 34 - 20 - 86 - 04</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">32 - 71 - 7 - 77 - 75</p>
-                <p class="machine">33 - 69 - 24 - 53 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">58 - 30 - 62 - 85 - 49</p>
-                <p class="machine">16 - 38 - 55 - 90 - 42</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">1 - 62 - 38 - 9 - 86</p>
-                <p class="machine">90 - 74 - 19 - 37 - 57</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">73 - 8 - 11 - 44 - 70</p>
-                <p class="machine">57 - 54 - 90 - 89 - 29</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">69 - 5 - 42 - 61 - 32</p>
-                <p class="machine">19 - 72 - 81 - 65 - 47</p>        
             </article>
         </section>
 
