--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,6 +179,41 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">friday 02/02/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">79 - 73 - 58 - 33 - 10</p>
+                <p class="machine">56 - 32 - 26 - 11 - 45</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">75 - 36 - 87 - 86 - 74</p>
+                <p class="machine">53 - 23 - 44 - 67 - 51</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">81 - 74 - 64 - 33 - 30</p>
+                <p class="machine">75 - 68 - 67 - 42 - 79</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">68 - 72 - 73 - 38 - 15</p>
+                <p class="machine">77 - 5 - 29 - 48 - 67</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">74 - 66 - 3 - 20 - 75</p>
+                <p class="machine">86 - 33 - 71 - 34 - 80</p>        
+            </article>
+            <article>
+                <h3 class="game">Vag</h3>
+                <p class="winning">23 - 68 - 79 - 34 - 80</p>
+                <p class="machine">57 - 60 - 33 - 70 - 69</p>        
+            </article>
+        </section>
+
+        
+        <section aria-label="two days ago result">
             <h2 class="date">thursday 01/02/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -209,41 +244,6 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">90 - 88 - 57 - 81 - 32</p>
                 <p class="machine">29 - 41 - 70 - 7 - 62</p>        
-            </article>
-        </section>
-
-
-        <section aria-label="two days ago result">
-            <h2 class="date">wednesday 31/1/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">72 - 48 - 6 - 45 - 20</p>
-                <p class="machine">10 - 84 - 85 - 62 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">49 - 75 - 48 - 36 - 46</p>
-                <p class="machine">54 - 88 - 61 - 24 - 82</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">22 - 88 - 53 - 80 - 49</p>
-                <p class="machine">45 - 31 - 71 - 43 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">48 - 58 - 27 - 57 - 12</p>
-                <p class="machine">78 - 47 - 87 - 88 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">90 - 39 - 33 - 84 - 72</p>
-                <p class="machine">31 - 63 - 24 - 68 - 67</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">14 - 66 - 17 - 43 - 51</p>
-                <p class="machine">70 - 40 - 2 - 84 - 83</p>        
             </article>
         </section>
 
