--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h4>Page Orientation</h4>
                     <button type="button" class="pageOrt-btn" id="pageOrt">Click to Change</button>
                 </div>
-                <button class="buy-lrCard">Buy LR Card</button>
+                <button class="buy-lrCard" id="buyLRcard">Buy LR Card</button>
             </div>
 
                         <!-- all games-->
@@ -184,22 +184,22 @@
 
                         <!-- footer-->
         <footer>
-            <small>Created & Manage <br> By <br> Hologuti Business Centre</small>
-            <a href="https://hologutibusinesscentre.com" target="_blank"><img src="https://i.postimg.cc/x1YB05Sf/hbc-logo-180.png" aria-hidden="true"></a>
+            <p>Created & Manage <br> By <br> Hologuti Business Centre</p>
+            <a href="https://hologutibusinesscentre.com" target="_blank"><img src="https://i.postimg.cc/x1YB05Sf/hbc-logo-180.png" aria-hidden="true" class="apex-domain"></a>
             <!-- <span>&copy;2023 Hologuti Business Centre - All Rights Reserved</span>   -->
             <div class="contentInfo-wrapper">
                 <a href="#" class="team">Team</a>
 
                 <div class="getInTouch">
-                    <span>Get in Touch</span>
-                    <a href="tel:+2349058206578">09058206578</a>
-                    <a href="mailto:vlb@hologutibusinesscentre.com">vlb@hologutibusinesscentre.com</a>
+                    <span class="span in-touch">Get in Touch</span>
+                    <a href="tel:+2349058206578" class="contact">09058206578</a>
+                    <a href="mailto:vlb@hologutibusinesscentre.com" class="contact">vlb@hologutibusinesscentre.com</a>
                 </div>
                 <div class="stayConnected">
-                    <span>Stay connected</span>
-                    <a href="https://twitter.com/visuaLottoBoard" target="_blank"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
-                    <a href="https://www.facebook.com/visuaLottoBoard" target="_blank"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
-                    <a href="https://m.me/109930914660224" target="_blank"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
+                    <span class="span connected">Stay connected</span>
+                    <a href="https://twitter.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
+                    <a href="https://www.facebook.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
+                    <a href="https://m.me/109930914660224" target="_blank" class="icon"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
                 </div>
             </div>
         </footer>
