--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h4>Page Orientation</h4>
                     <button type="button" class="pageOrt-btn" id="pageOrt">Click to Change</button>
                 </div>
-                <button class="buy-lrCard" id="buyLRcard">Buy LR Card</button>
+                <!-- <button class="buy-lrCard" id="buyLRcard">Buy LR Card</button> -->
             </div>
 
                         <!-- all games-->
