--- a/GAMES/17Fair-c.html
+++ b/GAMES/17Fair-c.html
@@ -871,7 +871,29 @@
                 </tr>
             </tbody> 
 
-                                    <!-- day11-->
+                                    <!-- day10-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">10</td>
+                    <td class="days"><small>Feb 3rd sat</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">87</td>
+                    <td class="winning">85</td>
+                    <td class="winning">14</td>
+                    <td class="winning">68</td>
+                    <td class="winning" id="lbw">44</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">39</td>
+                    <td class="machine">66</td>
+                    <td class="machine">43</td>
+                    <td class="machine">23</td>
+                    <td class="machine" id="lbm">59</td>
+                </tr>
+            </tbody> 
+
+                                    <!--day11-->
             <tbody>
                 <tr>
                     <td class="serial-num">11</td>
